{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 226,
  "lineage": "d34dcd91-821d-927f-e56b-c71692fd0cf4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-00d50527ea1ca9010",
                "route_table_id": "rtb-07e50fb01baa8c20f",
                "subnet_id": "subnet-0fe4ea1ce8fd99707"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "idr-cloud-dev-data-a"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-07e50fb01baa8c20f",
            "owner_id": "829561413961",
            "route_table_id": "rtb-07e50fb01baa8c20f",
            "routes": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-019416a52058ca22d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "idr-cloud-dev-data-a"
            },
            "vpc_id": "vpc-01dca847c855c4880"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-06b8de50e9c0a5ce2",
                "route_table_id": "rtb-0ffc4ed9891fc73f0",
                "subnet_id": "subnet-07b1f216e10ecf034"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "idr-cloud-dev-data-b"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0ffc4ed9891fc73f0",
            "owner_id": "829561413961",
            "route_table_id": "rtb-0ffc4ed9891fc73f0",
            "routes": [],
            "subnet_id": null,
            "tags": {
              "Name": "idr-cloud-dev-data-b"
            },
            "vpc_id": "vpc-01dca847c855c4880"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829561413961:vpc/vpc-01dca847c855c4880",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05739a51ca36a7da1",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b1c83dcb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "idr-cloud-dev"
                ]
              }
            ],
            "id": "vpc-01dca847c855c4880",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f5bada24c02c117b",
            "owner_id": "829561413961",
            "state": "available",
            "tags": {
              "Name": "idr-cloud-dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:829561413961:loadbalancer/net/idr-haproxy/dfc5dd6c2af434b4",
            "arn_suffix": "net/idr-haproxy/dfc5dd6c2af434b4",
            "dns_name": "idr-haproxy-dfc5dd6c2af434b4.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:829561413961:loadbalancer/net/idr-haproxy/dfc5dd6c2af434b4",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "idr-haproxy",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07b1f216e10ecf034"
              },
              {
                "subnet_id": "subnet-0fe4ea1ce8fd99707"
              }
            ],
            "subnets": [
              "subnet-07b1f216e10ecf034",
              "subnet-0fe4ea1ce8fd99707"
            ],
            "tags": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-01dca847c855c4880",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:829561413961:listener/net/idr-haproxy/dfc5dd6c2af434b4/40a61a7e1afe3921",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:829561413961:targetgroup/idr-haproxy/d3ed1f9d83fc707d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:829561413961:listener/net/idr-haproxy/dfc5dd6c2af434b4/40a61a7e1afe3921",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:829561413961:loadbalancer/net/idr-haproxy/dfc5dd6c2af434b4",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:829561413961:targetgroup/idr-haproxy/d3ed1f9d83fc707d",
            "arn_suffix": "targetgroup/idr-haproxy/d3ed1f9d83fc707d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:829561413961:targetgroup/idr-haproxy/d3ed1f9d83fc707d",
            "lambda_multi_value_headers_enabled": false,
            "name": "idr-haproxy",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-01dca847c855c4880"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829561413961:security-group/sg-0ab65aadbb99b6ee3",
            "description": "SG for HA proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab65aadbb99b6ee3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS traffic from Load Balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "All traffic from self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "idr-haproxy",
            "name_prefix": null,
            "owner_id": "829561413961",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01dca847c855c4880"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.16.0/21",
              "3.5.0.0/20"
            ],
            "id": "vpce-0c3cf4a14c3acefc8",
            "owner_id": "829561413961",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07e50fb01baa8c20f",
              "rtb-0ffc4ed9891fc73f0"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01dca847c855c4880"
          }
        }
      ]
    }
  ]
}